# agentic_workflow

./: .gitignore  README.md  conf.yaml.example  docker-compose.yml  nginx-setup-guide.sh  nginx-troubleshooting.md  nginx.conf.example  pyproject.toml  remove_readme_from_history.sh  requirements.txt  server.py  smiles_data.csv
docs/: development_reflections.md  password_storage.md
scripts/: add_node_task_timeout_columns.sql  delete_running_tasks.py  delete_running_tasks.sql  init_database.py  init_sam_design_menu.py  init_workflow_menus.py  testNovel.py  test_llm.py
src/: workflow.py
src/agents/: agents.py
src/config/: agents.py  configuration.py  loader.py  tools.py
src/graph/: builder.py  checkpoint.py  deep_research_engine.py  nodes.py  types.py
src/llms/: llm.py  rate_limiter.py
src/llms/providers/: reasoning.py
src/prompts/: coder.md  common_reporter.md  coordinator.md  deep_researcher.md  molecular_planner.md  planner.md  planner_model.py  reporter.md
src/rag/: ragflow.py  retriever.py
src/server/: __init__.py  app.py  chat_request.py  config_request.py  data_extraction_records.py  data_extraction_request.py  rag_request.py  tool_request.py  workflow_request.py  workflow_storage.py
src/server/auth/: __init__.py  crypto.py  db.py  dependencies.py  jwt.py  models.py  password.py  routes.py
src/server/auth/admin/: __init__.py  department_routes.py  departments.py  menu_routes.py  menus.py  organization_routes.py  organizations.py  permission_routes.py  permissions.py  role_routes.py  roles.py  user_routes.py  users.py
src/server/new_sam/: db.py
src/server/sam_design/: db.py
src/server/workflow/: db.py  executor.py  state_manager.py  template_parser.py  worker.py
src/tools/: __init__.py  data_extraction_tool.py  literature_search.py  literature_search_tool.py  molecular_analysis_tool.py  molecular_generator_tool.py  pdf_crawler_tool.py  prompt_optimizer_tool.py  property_predictor_tool.py  python_repl.py  tts_tool.py  visualize_molecules_tool.py
src/tools/deep_research/: __init__.py
src/tools/molecular_generator/: __init__.py  sam_generator.py
src/tools/property_predictor/: SAM_mol_0721.csv  prop_predictor.py
src/tools/property_predictor/unimol_tools/weights/: mol.dict.txt
src/workflow/: __init__.py  compiler.py
web/: docker-compose.yml  next.config.js  package.json  tsconfig.json
web/messages/: en.json  zh.json
web/public/: mission.html  test_markdown_image.html
web/src/app/: layout.tsx  page.tsx
web/src/app/admin/: layout.tsx  page.tsx
web/src/app/admin/departments/: page.tsx
web/src/app/admin/menus/: page.tsx
web/src/app/admin/organizations/: page.tsx
web/src/app/admin/permissions/: page.tsx
web/src/app/admin/roles/: page.tsx
web/src/app/admin/users/: page.tsx
web/src/app/chat/: main.tsx  page.tsx
web/src/app/chat/components/: conversation-starter.tsx  dashboard.tsx  equipment-access.tsx  equipment-management.tsx  experiment-result-analysis.tsx  input-box.tsx  knowledge-base-detail.tsx  knowledge-base.tsx  message-list-view.tsx  messages-block.tsx  model-selector.tsx  range-slider.tsx  research-activities-block.tsx  research-block.tsx  research-report-block.tsx  sidebar.tsx  site-header.tsx  stepper.tsx  task-creation-form.tsx  task-scheduling.tsx  tool-executor.tsx  toolbox.tsx  welcome.tsx  workflow-list.tsx  workflows-page.tsx
web/src/app/login/: page.tsx
web/src/app/newSam/: page.tsx
web/src/app/sam-design/: page.tsx  types.ts
web/src/components/ui/: button.tsx  card.tsx  image.tsx  logo.tsx  markdown.tsx  message-input.tsx  progress.tsx  resource-suggestion.tsx  theme-provider-wrapper.tsx  tooltip.tsx
web/src/core/api/: admin.ts  api-client.ts  auth.ts  chat.ts  conversations.ts  data-extraction.ts  hooks.ts  new-sam.ts  rag.ts  resolve-service-url.ts  sam-design.ts  tools.ts  workflow.ts
web/src/core/config/: tools.ts  types.ts
web/src/core/messages/: types.ts
web/src/core/sse/: fetch-stream.ts
web/src/core/store/: auth-store.ts  settings-store.ts  store.ts
web/src/core/utils/: crypto.ts
web/src/styles/: globals.css
web/src/types/: app.ts
(+48 files in other folders)
